[gd_scene load_steps=3 format=3 uid="uid://dud40ym4lqqq1"]

[ext_resource type="Script" path="res://TimestampStick.gd" id="1_modyj"]

[sub_resource type="LabelSettings" id="LabelSettings_beuy6"]
line_spacing = -2.0
font_size = 12

[node name="OuterTimestampStick" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 48.0
offset_bottom = 283.0
mouse_filter = 2
script = ExtResource("1_modyj")

[node name="UpperTimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0530035
anchor_right = 1.0
anchor_bottom = 0.113074
grow_horizontal = 2
pivot_offset = Vector2(24, 16)
mouse_filter = 1
text = "00:00:12"
label_settings = SubResource("LabelSettings_beuy6")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="UpperTimeLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Relative to: Stream 1"
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
flat = true

[node name="LowerTimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.886926
anchor_right = 1.0
anchor_bottom = 0.946996
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(24, 16)
mouse_filter = 1
text = "00:00:12"
label_settings = SubResource("LabelSettings_beuy6")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="LowerTimeLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Relative to: Stream 2"
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
flat = true

[node name="UpperHorizontalStick" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 35.0
offset_bottom = 39.0
grow_horizontal = 2
mouse_filter = 2
color = Color(0.627451, 0.352941, 0, 1)

[node name="LowerHorizontalStick" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -39.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
color = Color(0.627451, 0.352941, 0, 1)

[node name="VerticalStick" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 35.0
offset_right = 1.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.627451, 0.352941, 0, 1)

[connection signal="pressed" from="UpperTimeLabel/Button" to="." method="_on_either_button_pressed"]
[connection signal="pressed" from="LowerTimeLabel/Button" to="." method="_on_either_button_pressed"]
